<resources>
    <string name="app_name" translatable="false">Android Labs</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a Button!</string>
    <string name="check_this_out">Check this out!</string>
    <string name="look_at_my_gui">Look at my GUI</string>
    <string name="click_here">CLICK HERE</string>
    <string name="type_here">Type here</string>
    <string name="switch_on_off">Switch on / off</string>
    <string name="toast_message">Here is more information</string>
    <string name="checkOn">The checkbox is now on</string>
    <string name="checkOff">The checkbox is now off</string>
    <string name="swchOn">The switch is now on</string>
    <string name="swchOff">The switch is now off</string>
    <string name="undo">Undo</string>
    <string name="enter_your_email_address">Enter your email address:</string>
    <string name="type_email_here">Type email here</string>
    <string name="type_your_password">Type your password:</string>
    <string name="GoToChat">Go to chat</string>
    <string name="your_profile">Your profile</string>
    <string name="your_name">Your name:</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="your_email">Your email:</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="your_picture">Your picture:</string>
    <string name="click_the_button_above_to_take_a_picture">Click the button above to take a picture</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>